--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ##BANCO DE DADOS
-DB_CONNECTION=postgres
+DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=3306
 DB_DATABASE=sysFamarcia
 DB_USERNAME=root
 DB_PASSWORD=root #Senha tem que ser geranda por criptografia
