--- a/.docker/apache/Dockerfile
+++ b/.docker/apache/Dockerfile
@@ -1,3 +1,3 @@
-FROM httpd:latest
+# FROM httpd:latest
 
-COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
+# COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
