--- a/.docker/apache/httpd.conf
+++ b/.docker/apache/httpd.conf
@@ -1,12 +1,12 @@
-ServerName localhost
-DocumentRoot /var/www/html
+# ServerName localhost
+# DocumentRoot /var/www/html
 
-<Directory "/var/www/html">
-    Options Indexes FollowSymLinks
-    AllowOverride All
-    Require all granted
-</Directory>
+# <Directory "/var/www/html">
+#     Options Indexes FollowSymLinks
+#     AllowOverride All
+#     Require all granted
+# </Directory>
 
-<FilesMatch \.php$>
-    SetHandler application/x-httpd-php
-</FilesMatch>
+# <FilesMatch \.php$>
+#     SetHandler application/x-httpd-php
+# </FilesMatch>
